JaCoCo is happy